fix: Shift staff login and add staff section to new tab in settings

--- a/resources/js/setting-dashboard/style.scss
+++ b/resources/js/setting-dashboard/style.scss
@@ -1,6 +1,6 @@
 .setting-dashboard_container {
     padding-inline-start: 2.15em;
-    padding-inline-end: 2.5em;
+    padding-inline-end: 20px;
     width: 100%;
     padding-left: 34px !important;
 }
