--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -339,7 +339,7 @@ input[type="number"] {
     left: -14px !important;
 }
 .ant-tabs-top > .ant-tabs-nav::before {
-    max-width: 781px !important;
+    max-width: 880px !important;
     height: 3px !important;
 }
 
